roles/EFK_Stack/Kibanana/files/Kibana_Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kang-kibana
  namespace: elastic-system
  annotations:
    cert-manager.io/cluster-issuer: prod-issuer
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - kibana.oblivionone.com
    secretName: kang-ingress-secret
  rules:
  - host: kibana.oblivionone.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kang-kibana-kb-http
            port:
              number: 5601
